<resources>
    <string name="app_name">MyCactusChat</string>
    <string name="app_nameNew">Cactus Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="dont_have_account">"Don't have account?"</string>
    <string name="create_account">"C R E A T E     A C C O U N T"</string>
    <string name="contacts">Recipes</string>
    <string name="messages">Products</string>
    <string name="profile">Profile</string>
    <string name="message">Message...</string>
    <string name="search">Search</string>
    <string name="clear_history">"Clear history"</string>
    <string name="delete_chat">"Leave Chat"</string>
    <string name="invite_chat">"Invite Chat"</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sing_in_now">"SING IN NOW"</string>
    <string name="sing_up">" Sign Up "</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="join_us">"JOIN US"</string>
    <string name="are_you_sure">"Are you sure?"</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="settings">"Settings "</string>
    <string name="saving_photo_to_the_gallery">"Saving photo to the gallery"</string>
    <string name="dark_mode">"Dark Mode"</string>
    <string name="light_mode">"Light Mode"</string>
    <string name="logout">"Logout "</string>
    <string name="contacts_caps">"R E C I P E S"</string>
    <string name="messages_caps">"P R O D U C T S"</string>
    <string name="profile_caps">"P R O F I L E"</string>
    <string name="newreciept_caps">"N E W   R E C I P E"</string>
    <string name="done">Done</string>
    <string name="take_photo">"Take Photo"</string>
    <string name="choose_from_gallery">"Choose from Gallery"</string>
    <string name="exit">"Exit"</string>
    <string name="error">"Wrong format email: name@domenname.ru"</string>
    <string name="errorPhone">"Wrong format phone: xxxxxxxxxx"</string>
    <string name="errorNull">"Not all fields are filled in!"</string>
    <string name="errorPassword">"Your password is to short! At least 6 characters"</string>
    <string name="errorStored">"Failed stored!"</string>
    <string name="successStored">"Success stored!"</string>
    <string name="successUpdate">"Data has been updated!"</string>
    <string name="errorUpdate">"Fail to update the data!"</string>
    <string name="receive_notifications">"Receive notifications"</string>
    <string name="delete_message">"Delete message"</string>
    <string name="delete_image">"Delete image"</string>
    <string name="zoom_image">"Zoom image"</string>
    <string name="edit_message">"Edit message"</string>
    <string name="delete_profile">"Delete profile"</string>
    <string name="welcome">"Welcome!"</string>
    <string name="no_user">"User not found!"</string>
    <string name="success_registrate">"You have been successfully registered!"</string>
    <string name="already_registrate">"You have been already registered!"</string>
    <string name="no_registrate">"Failed to register!"</string>
    <string name="success_delete_profile">"Profile successfully deleted!"</string>
    <string name="error_delete_profile">"Error to delete profile!"</string>
    <string name="future_update">"Group chats will be available in the next update"</string>
    <string name="unread_message">"You have new message"</string>
    <string name="save">"Save"</string>
    <string name="favourites">"Favourites"</string>
    <string name="personal">"Personal"</string>
    <string name="all">"All"</string>
</resources>