<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lavender"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <WebView
                android:id="@+id/webvidewCactusHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:background="@null" />

            <TextView
                style="@style/TextViewTitleText"
                android:text="C A C T U S     C H A T"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldPhoneSignIn"
                style="@style/TextInputLayoutStyle"
                app:prefixTextColor="@color/light_pastel_purple_dark"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditPhoneSignIn"
                    style="@style/TextInputEditTextStyleSign"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldPasswordSignIn"
                style="@style/TextInputLayoutStyle"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/dark_purple">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditPasswordSignIn"
                    style="@style/TextInputEditTextStyleSign"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSignIn"
                style="@style/AppCompatButtonStyle"
                android:onClick="gotoSignUpActivity"
                android:text="@string/sing_in_now"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDontHave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/dark_purple" />

                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="gotoSignUpActivity"
                    android:gravity="center_horizontal"
                    android:text="@string/sing_up"
                    android:textColor="@color/dark_purple"
                    android:textStyle="" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>